--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,1 +1,26 @@
+name: Metrics
+on:
+  schedule:
+    - cron: "0 18 * * *"
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: lowlighter/metrics@latest
+        with:
+          # 生成文件名（会出现在仓库根目录）
+          filename: metrics.svg
+          # 用默认 GITHUB_TOKEN 即可，若报速率限制再换 PAT
+          token: ${{ secrets.GITHUB_TOKEN }}
+          base: header, activity, community, repositories, metadata
+          config_timezone: Asia/Shanghai
+
+          # 常用插件（任选）
+          plugin_achievements: yes
+          plugin_achievements_threshold: C
+          plugin_languages: yes
+          plugin_languages_limit: 8
+          plugin_isocalendar: yes
 
