--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -1,1 +1,11 @@
+name: Smoke
+
+on:
+  workflow_dispatch: {}
+
+jobs:
+  hello:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "It works!"
 
